SFA-5543: Alignment issue with dropdown contextual edit menu fixed

--- a/sugarcrm/styleguide/less/sugar/quotes.less
+++ b/sugarcrm/styleguide/less/sugar/quotes.less
@@ -300,8 +300,6 @@
         }
 
         .left-column-buttons {
-          z-index: 10;
-
           .dropdown-menu {
             left: 26px;
           }
